--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "expo": "~54.0.30",
+    "expo-app-loading": "^2.1.1",
     "expo-image-picker": "^17.0.10",
     "expo-location": "^19.0.8",
+    "expo-splash-screen": "^31.0.13",
     "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
